--- a/src/styles/to-do-list.css
+++ b/src/styles/to-do-list.css
@@ -74,7 +74,7 @@
         margin-right: 5vw;
     }
 }
-@media only screen and (max-width:961px)  { 
+@media only screen and (min-width:601px)  { 
     /* tablet, landscape iPad, lo-res laptops ands desktops */ 
     #do-list-nav {
         width: 100%;
@@ -99,7 +99,7 @@
         font-size: 1.5rem;
     }
 }
-@media only screen and (max-width:1025px) { 
+@media only screen and (min-width:962px) { 
     /* big landscape tablets, laptops, and desktops */ 
     #do-list-nav {
         width: 100%;
